# learn-cpp

01-basics/01-hello-world/: app  main.cpp
01-basics/02-input-output/: app  main.cpp
01-basics/03-conditionals/: app  main.cpp
01-basics/04-switch-calculator/: app  main.cpp
01-basics/05-for-loop-sum/: app  main.cpp
01-basics/06-while-digit-sum/: app  main.cpp
01-basics/07-prime-check/: app  main.cpp
01-basics/08-count-primes/: app  main.cpp
01-basics/09-vector-sum-max/: main.cpp
01-basics/10-filter-even/: main.cpp
01-basics/11-reverse-vector/: main.cpp
01-basics/12-palindrome-string/: main.cpp
01-basics/13-sort-vector/: main.cpp
01-basics/14-binary-search/: main.cpp
02-stl/15-frequency-queries/: main.cpp
02-stl/16-character-frequency/: main.cpp
02-stl/17-distinct-values/: main.cpp
02-stl/18-stack-commands/: main.cpp
02-stl/19-queue-commands/: main.cpp
02-stl/20-priority-task-scheduler/: main.cpp
03-oop/21-bank-account/: main.cpp
04-memory/23-pointer-reference-raii/: main.cpp
05-project-structure/24-file-task-manager/: CMakeLists.txt  tasks.db
05-project-structure/24-file-task-manager/include/: task.hpp
05-project-structure/24-file-task-manager/src/: main.cpp  task.cpp
06-projects/file-indexer/src/: main.cpp
